# kb_web_svc

./: =2.0  API.md  Makefile  README.md  alembic.ini  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 60a3b062a776_add_deleted_at_column_to_tasks_table.py  b5a72e6fd467_create_task_model_with_priority_and_.py
src/kb_web_svc/: app.py  config.py  database.py  state_management.py
src/kb_web_svc/api/: __init__.py  app.py
src/kb_web_svc/components/: __init__.py  json_import_export_ui.py  kanban_board.py  task_card.py  task_form.py
src/kb_web_svc/models/: __init__.py  base.py  task.py
src/kb_web_svc/pages/: __init__.py
src/kb_web_svc/routes/: __init__.py  task_routes.py
src/kb_web_svc/schemas/: __init__.py  import_export_schemas.py  task.py
src/kb_web_svc/services/: __init__.py  json_import_export_service.py  task_service.py
tests/: conftest.py  test_app.py  test_database.py  test_migrations.py  test_readme_db_config.py  test_readme_session_state.py  test_state_management.py
tests/components/: __init__.py  test_json_import_export_ui.py  test_kanban_board.py  test_task_card.py  test_task_form_ui.py  test_task_form_validation.py
tests/models/: test_base.py  test_task.py
tests/routes/: __init__.py  test_task_routes.py
tests/schemas/: __init__.py  test_import_export_schemas.py
tests/services/: test_json_import_export_service.py  test_task_delete_service.py  test_task_retrieval_service.py  test_task_service.py  test_task_service_docstring.py  test_task_status_transition.py  test_task_update_service.py
