[tool.poetry]
name = "kb_web_svc"
version = "1.0.0"
description = ""
authors = ["AIdev"]
readme = "README.md"
packages = [{include = "kb_web_svc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.10.2"
streamlit = "^1.42.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
fastapi = "^0.117.1"
httpx = "^0.28.1"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
playwright = "^1.55.0"

[tool.poetry.scripts]
kb_web_svc = "kb_web_svc.main:main"

[tool.pytest.ini_options]
pythonpath = [ "src/" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"